--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,7 +1,19 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
-    "configurations": []
-}
+    "configurations": [
+      {
+        "name": "(gdb) Launch",
+        "type": "cppdbg",
+        "request": "launch",
+        "program": "${fileDirname}/${fileBasenameNoExtension}.exe",
+        "args": [],
+        "stopAtEntry": false,
+        "cwd": "${fileDirname}",
+        "externalConsole": true,
+        "MIMode": "gdb",
+        "miDebuggerPath": "C:/Program Files/mingw64/bin/gdb.exe",
+        "preLaunchTask": "C/C++: g++.exe 활성 파일 빌드"
+      }
+    ]
+  }
+  
