--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,48 +1,18 @@
 {
+    "version": "2.0.0",
     "tasks": [
-        {
-            "type": "cppbuild",
-            "label": "C/C++: gcc.exe 활성 파일 빌드",
-            "command": "C:\\Program Files\\mingw64\\bin\\gcc.exe",
-            "args": [
-                "-fdiagnostics-color=always",
-                "-g",
-                "${file}",
-                "-o",
-                "${fileDirname}\\${fileBasenameNoExtension}.exe"
-            ],
-            "options": {
-                "cwd": "${fileDirname}"
-            },
-            "problemMatcher": [
-                "$gcc"
-            ],
-            "group": "build",
-            "detail": "디버거에서 생성된 작업입니다."
-        },
-        {
-            "type": "cppbuild",
-            "label": "C/C++: g++.exe 활성 파일 빌드",
-            "command": "C:\\Program Files\\mingw64\\bin\\g++.exe",
-            "args": [
-                "-fdiagnostics-color=always",
-                "-g",
-                "${file}",
-                "-o",
-                "${fileDirname}\\${fileBasenameNoExtension}.exe"
-            ],
-            "options": {
-                "cwd": "${fileDirname}"
-            },
-            "problemMatcher": [
-                "$gcc"
-            ],
-            "group": {
-                "kind": "build",
-                "isDefault": true
-            },
-            "detail": "컴파일러: C:\\Program Files\\mingw64\\bin\\g++.exe"
-        }
-    ],
-    "version": "2.0.0"
-}
+      {
+        "label": "Build with g++",
+        "type": "shell",
+        "command": "g++",
+        "args": [
+          "-std=gnu++20",
+          "-Wall","-Wextra",
+          "seating.cpp","console.cpp",
+          "-o","seating.exe"
+        ],
+        "problemMatcher": ["$gcc"]
+      }
+    ]
+  }
+  
